<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              tools:context=".RequestViewActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolBarStyle">
    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10dp">

            <TextView
                    style="@style/RequestText"
                    android:id="@+id/txt_company"
                    android:text="@string/company"
                    android:layout_alignParentTop="true"
                    android:layout_height="@dimen/txt_company_name_height"
                    android:layout_width="wrap_content"/>

            <ImageView
                    android:id="@+id/image_status"
                    android:layout_width="@dimen/image_view_width"
                    android:layout_height="wrap_content"
                    android:src="@drawable/status"
                    android:visibility="visible"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/txt_company"
                    android:layout_marginLeft="@dimen/status_image_margin_left"
                    android:layout_above="@+id/txt_created_label"
                    android:height="@dimen/status_image_height"/>

            <TextView
                    android:id="@+id/txt_status"
                    style="@style/TextStatusRequestStyle"
                    android:text="@string/status"
                    android:layout_marginTop="@dimen/status_image_margin_top"
                    android:layout_alignLeft="@+id/image_status"
                    android:layout_marginLeft="@dimen/status_text_margin_left"
                    android:layout_alignStart="@+id/image_status"/>

            <TableRow
                    android:id="@+id/delimiter1"
                    style="@style/DelimiterStyle"
                    android:layout_below="@+id/txt_company"/>

            <TextView
                    style="@style/CaptionText"
                    android:id="@+id/txt_created_label"
                    android:text="@string/created"
                    android:layout_below="@+id/delimiter1"
                    android:layout_alignLeft="@+id/delimiter1"/>

            <TextView
                    style="@style/RequestText"
                    android:text="@string/created_date"
                    android:id="@+id/txt_created_value"
                    android:layout_alignBaseline="@+id/txt_created_label"
                    android:layout_alignBottom="@+id/txt_created_label"
                    android:layout_alignLeft="@+id/txt_created_label"
                    android:layout_alignStart="@+id/txt_created_label"
                    android:layout_marginLeft="@dimen/margin_left_values"
                    android:layout_width="match_parent"/>

            <TableRow
                    style="@style/DelimiterStyle"
                    android:layout_below="@+id/txt_created_label"
                    android:id="@+id/delimiter2"/>

            <TextView
                    style="@style/CaptionText"
                    android:id="@+id/txt_registered_label"
                    android:text="@string/registered"
                    android:layout_below="@+id/delimiter2"
                    android:layout_alignLeft="@+id/delimiter2"/>

            <TextView
                    style="@style/RequestText"
                    android:text="@string/created_date"
                    android:id="@+id/txt_registered_value"
                    android:layout_above="@+id/delimiter3"
                    android:layout_alignLeft="@+id/txt_registered_label"
                    android:layout_alignStart="@+id/txt_registered_label"
                    android:layout_marginLeft="@dimen/margin_left_values"/>

            <TableRow
                    style="@style/DelimiterStyle"
                    android:layout_below="@+id/txt_registered_label"
                    android:id="@+id/delimiter3"/>

            <TextView
                    style="@style/CaptionText"
                    android:id="@+id/txt_solve_label"
                    android:text="@string/resolve"
                    android:layout_below="@+id/delimiter3"
                    android:layout_alignLeft="@+id/delimiter3"/>

            <TextView
                    style="@style/RequestText"
                    android:text="@string/resolveData"
                    android:id="@+id/txt_request_solve_value"
                    android:layout_alignBaseline="@+id/txt_solve_label"
                    android:layout_alignBottom="@+id/txt_solve_label"
                    android:layout_alignLeft="@+id/txt_solve_label"
                    android:layout_alignStart="@+id/txt_solve_label"
                    android:layout_marginLeft="@dimen/margin_left_values"/>

            <TableRow
                    style="@style/DelimiterStyle"
                    android:layout_below="@+id/txt_solve_label"
                    android:id="@+id/delimiter4"/>

            <TextView
                    style="@style/CaptionText"
                    android:id="@+id/txt_responsible"
                    android:text="@string/responsible"
                    android:layout_below="@+id/delimiter4"
                    android:layout_alignLeft="@+id/delimiter4"/>

            <TextView
                    style="@style/RequestText"
                    android:text="@string/responsibleForValue"
                    android:id="@+id/txt_responsible_value"
                    android:layout_alignBaseline="@+id/txt_responsible"
                    android:layout_alignBottom="@+id/txt_responsible"
                    android:layout_alignLeft="@+id/txt_responsible"
                    android:layout_alignStart="@+id/txt_responsible"
                    android:layout_marginLeft="@dimen/margin_left_values"/>

            <TableRow
                    android:id="@+id/tableRow5"
                    style="@style/DelimiterStyle"
                    android:layout_below="@+id/txt_responsible"/>

            <TextView
                    android:id="@+id/txt_request_text"
                    android:textSize="@dimen/caption_text_size"
                    android:text="@string/text_complain"
                    android:layout_below="@+id/tableRow5"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/request_main_text_margin_top"
                    android:layout_marginLeft="@dimen/request_main_text_margin_left"
                    android:layout_marginStart="@dimen/margin10dp"
                    android:layout_alignRight="@+id/tableRow5"
                    android:layout_alignEnd="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:id="@+id/images_view"
                    android:layout_height="@dimen/image_size"
                    android:scrollbars="horizontal"
                    android:layout_below="@+id/txt_request_text"
                    android:layout_alignLeft="@+id/txt_request_text"
                    android:layout_alignStart="@+id/txt_request_text"
                    android:layout_marginTop="@dimen/images_view_margin_top"
                    android:layout_marginRight="@dimen/margin10dp"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>